typescript-rewrite/samlang-core/src/parser/generated/PLParser.ts
// Generated from PL.g4 by ANTLR 4.7.3-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { PLListener } from "./PLListener";
import { PLVisitor } from "./PLVisitor";


export class PLParser extends Parser {
	public static readonly IMPORT = 1;
	public static readonly FROM = 2;
	public static readonly CLASS = 3;
	public static readonly VAL = 4;
	public static readonly FUNCTION = 5;
	public static readonly METHOD = 6;
	public static readonly AS = 7;
	public static readonly PRIVATE = 8;
	public static readonly PROTECTED = 9;
	public static readonly INTERNAL = 10;
	public static readonly PUBLIC = 11;
	public static readonly IF = 12;
	public static readonly THEN = 13;
	public static readonly ELSE = 14;
	public static readonly MATCH = 15;
	public static readonly PANIC = 16;
	public static readonly RETURN = 17;
	public static readonly INT = 18;
	public static readonly STRING = 19;
	public static readonly BOOL = 20;
	public static readonly UNIT = 21;
	public static readonly TRUE = 22;
	public static readonly FALSE = 23;
	public static readonly THIS = 24;
	public static readonly WILDCARD = 25;
	public static readonly STRING2INT = 26;
	public static readonly INT2STRING = 27;
	public static readonly PRINTLN = 28;
	public static readonly SELF = 29;
	public static readonly CONST = 30;
	public static readonly LET = 31;
	public static readonly VAR = 32;
	public static readonly TYPE = 33;
	public static readonly INTERFACE = 34;
	public static readonly FUNCTOR = 35;
	public static readonly EXTENDS = 36;
	public static readonly IMPLEMENTS = 37;
	public static readonly EXPORT = 38;
	public static readonly ASSERT = 39;
	public static readonly LPAREN = 40;
	public static readonly RPAREN = 41;
	public static readonly LBRACE = 42;
	public static readonly RBRACE = 43;
	public static readonly LBRACKET = 44;
	public static readonly RBRACKET = 45;
	public static readonly QUESTION = 46;
	public static readonly SEMICOLON = 47;
	public static readonly COLON = 48;
	public static readonly COLONCOLON = 49;
	public static readonly COMMA = 50;
	public static readonly DOT = 51;
	public static readonly BAR = 52;
	public static readonly ARROW = 53;
	public static readonly ASSIGN = 54;
	public static readonly NOT = 55;
	public static readonly MUL = 56;
	public static readonly DIV = 57;
	public static readonly MOD = 58;
	public static readonly PLUS = 59;
	public static readonly MINUS = 60;
	public static readonly STRUCT_EQ = 61;
	public static readonly LT = 62;
	public static readonly LE = 63;
	public static readonly GT = 64;
	public static readonly GE = 65;
	public static readonly STRUCT_NE = 66;
	public static readonly AND = 67;
	public static readonly OR = 68;
	public static readonly SPREAD = 69;
	public static readonly LowerId = 70;
	public static readonly UpperId = 71;
	public static readonly MinInt = 72;
	public static readonly IntLiteral = 73;
	public static readonly StrLiteral = 74;
	public static readonly HexLiteral = 75;
	public static readonly DecimalLiteral = 76;
	public static readonly OctalLiteral = 77;
	public static readonly COMMENT = 78;
	public static readonly WS = 79;
	public static readonly LINE_COMMENT = 80;
	public static readonly RULE_module = 0;
	public static readonly RULE_importModuleMembers = 1;
	public static readonly RULE_moduleReference = 2;
	public static readonly RULE_moduleMember = 3;
	public static readonly RULE_clazz = 4;
	public static readonly RULE_interfaze = 5;
	public static readonly RULE_classHeaderDeclaration = 6;
	public static readonly RULE_classMemberDefinition = 7;
	public static readonly RULE_classMemberDeclaration = 8;
	public static readonly RULE_typeParametersDeclaration = 9;
	public static readonly RULE_typeDeclaration = 10;
	public static readonly RULE_objectTypeFieldDeclaration = 11;
	public static readonly RULE_variantTypeConstructorDeclaration = 12;
	public static readonly RULE_typeExpr = 13;
	public static readonly RULE_typeParameters = 14;
	public static readonly RULE_annotatedVariable = 15;
	public static readonly RULE_optionallyAnnotatedParameter = 16;
	public static readonly RULE_typeAnnotation = 17;
	public static readonly RULE_patternToExpr = 18;
	public static readonly RULE_statementBlock = 19;
	public static readonly RULE_statement = 20;
	public static readonly RULE_expression = 21;
	public static readonly RULE_objectFieldDeclarations = 22;
	public static readonly RULE_objectFieldDeclaration = 23;
	public static readonly RULE_functionArguments = 24;
	public static readonly RULE_pattern = 25;
	public static readonly RULE_varOrWildCard = 26;
	public static readonly RULE_varOrRenamedVar = 27;
	public static readonly RULE_factorOperator = 28;
	public static readonly RULE_termOperator = 29;
	public static readonly RULE_comparisonOperator = 30;
	public static readonly RULE_literal = 31;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"module", "importModuleMembers", "moduleReference", "moduleMember", "clazz", 
		"interfaze", "classHeaderDeclaration", "classMemberDefinition", "classMemberDeclaration", 
		"typeParametersDeclaration", "typeDeclaration", "objectTypeFieldDeclaration", 
		"variantTypeConstructorDeclaration", "typeExpr", "typeParameters", "annotatedVariable", 
		"optionallyAnnotatedParameter", "typeAnnotation", "patternToExpr", "statementBlock", 
		"statement", "expression", "objectFieldDeclarations", "objectFieldDeclaration", 
		"functionArguments", "pattern", "varOrWildCard", "varOrRenamedVar", "factorOperator", 
		"termOperator", "comparisonOperator", "literal",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "'import'", "'from'", "'class'", "'val'", "'function'", "'method'", 
		"'as'", "'private'", "'protected'", "'internal'", "'public'", "'if'", 
		"'then'", "'else'", "'match'", "'panic'", "'return'", "'int'", "'string'", 
		"'bool'", "'unit'", "'true'", "'false'", "'this'", "'_'", "'stringToInt'", 
		"'intToString'", "'println'", "'self'", "'const'", "'let'", "'var'", "'type'", 
		"'interface'", "'functor'", "'extends'", "'implements'", "'export'", "'assert'", 
		"'('", "')'", "'{'", "'}'", "'['", "']'", "'?'", "';'", "':'", "'::'", 
		"','", "'.'", "'|'", "'->'", "'='", "'!'", "'*'", "'/'", "'%'", "'+'", 
		"'-'", "'=='", "'<'", "'<='", "'>'", "'>='", "'!='", "'&&'", "'||'", "'...'", 
		undefined, undefined, "'-9223372036854775808'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, "IMPORT", "FROM", "CLASS", "VAL", "FUNCTION", "METHOD", "AS", 
		"PRIVATE", "PROTECTED", "INTERNAL", "PUBLIC", "IF", "THEN", "ELSE", "MATCH", 
		"PANIC", "RETURN", "INT", "STRING", "BOOL", "UNIT", "TRUE", "FALSE", "THIS", 
		"WILDCARD", "STRING2INT", "INT2STRING", "PRINTLN", "SELF", "CONST", "LET", 
		"VAR", "TYPE", "INTERFACE", "FUNCTOR", "EXTENDS", "IMPLEMENTS", "EXPORT", 
		"ASSERT", "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACKET", "RBRACKET", 
		"QUESTION", "SEMICOLON", "COLON", "COLONCOLON", "COMMA", "DOT", "BAR", 
		"ARROW", "ASSIGN", "NOT", "MUL", "DIV", "MOD", "PLUS", "MINUS", "STRUCT_EQ", 
		"LT", "LE", "GT", "GE", "STRUCT_NE", "AND", "OR", "SPREAD", "LowerId", 
		"UpperId", "MinInt", "IntLiteral", "StrLiteral", "HexLiteral", "DecimalLiteral", 
		"OctalLiteral", "COMMENT", "WS", "LINE_COMMENT",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(PLParser._LITERAL_NAMES, PLParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return PLParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "PL.g4"; }

	// @Override
	public get ruleNames(): string[] { return PLParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return PLParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(PLParser._ATN, this);
	}
	// @RuleVersion(0)
	public module(): ModuleContext {
		let _localctx: ModuleContext = new ModuleContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, PLParser.RULE_module);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 67;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PLParser.IMPORT) {
				{
				{
				this.state = 64;
				this.importModuleMembers();
				}
				}
				this.state = 69;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 73;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 3)) & ~0x1F) === 0 && ((1 << (_la - 3)) & ((1 << (PLParser.CLASS - 3)) | (1 << (PLParser.PRIVATE - 3)) | (1 << (PLParser.INTERFACE - 3)))) !== 0)) {
				{
				{
				this.state = 70;
				this.moduleMember();
				}
				}
				this.state = 75;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 76;
			this.match(PLParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public importModuleMembers(): ImportModuleMembersContext {
		let _localctx: ImportModuleMembersContext = new ImportModuleMembersContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, PLParser.RULE_importModuleMembers);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 78;
			this.match(PLParser.IMPORT);
			this.state = 79;
			this.match(PLParser.LBRACE);
			this.state = 80;
			this.match(PLParser.UpperId);
			this.state = 85;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PLParser.COMMA) {
				{
				{
				this.state = 81;
				this.match(PLParser.COMMA);
				this.state = 82;
				this.match(PLParser.UpperId);
				}
				}
				this.state = 87;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 88;
			this.match(PLParser.RBRACE);
			this.state = 89;
			this.match(PLParser.FROM);
			this.state = 90;
			this.moduleReference();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public moduleReference(): ModuleReferenceContext {
		let _localctx: ModuleReferenceContext = new ModuleReferenceContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, PLParser.RULE_moduleReference);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 92;
			this.match(PLParser.UpperId);
			this.state = 97;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PLParser.DOT) {
				{
				{
				this.state = 93;
				this.match(PLParser.DOT);
				this.state = 94;
				this.match(PLParser.UpperId);
				}
				}
				this.state = 99;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public moduleMember(): ModuleMemberContext {
		let _localctx: ModuleMemberContext = new ModuleMemberContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, PLParser.RULE_moduleMember);
		try {
			this.state = 102;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 4, this._ctx) ) {
			case 1:
				_localctx = new ClassAsModuleMemberContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 100;
				this.clazz();
				}
				break;

			case 2:
				_localctx = new InterfaceAsModuleMemberContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 101;
				this.interfaze();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public clazz(): ClazzContext {
		let _localctx: ClazzContext = new ClazzContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, PLParser.RULE_clazz);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 104;
			this.classHeaderDeclaration();
			this.state = 105;
			this.match(PLParser.LBRACE);
			this.state = 109;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PLParser.FUNCTION) | (1 << PLParser.METHOD) | (1 << PLParser.PRIVATE))) !== 0)) {
				{
				{
				this.state = 106;
				this.classMemberDefinition();
				}
				}
				this.state = 111;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 112;
			this.match(PLParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public interfaze(): InterfazeContext {
		let _localctx: InterfazeContext = new InterfazeContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, PLParser.RULE_interfaze);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 115;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PLParser.PRIVATE) {
				{
				this.state = 114;
				this.match(PLParser.PRIVATE);
				}
			}

			this.state = 117;
			this.match(PLParser.INTERFACE);
			this.state = 118;
			this.match(PLParser.UpperId);
			this.state = 120;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PLParser.LT) {
				{
				this.state = 119;
				this.typeParametersDeclaration();
				}
			}

			this.state = 122;
			this.match(PLParser.LBRACE);
			this.state = 126;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << PLParser.FUNCTION) | (1 << PLParser.METHOD) | (1 << PLParser.PRIVATE))) !== 0)) {
				{
				{
				this.state = 123;
				this.classMemberDeclaration();
				}
				}
				this.state = 128;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 129;
			this.match(PLParser.RBRACE);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classHeaderDeclaration(): ClassHeaderDeclarationContext {
		let _localctx: ClassHeaderDeclarationContext = new ClassHeaderDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, PLParser.RULE_classHeaderDeclaration);
		let _la: number;
		try {
			this.state = 148;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 12, this._ctx) ) {
			case 1:
				_localctx = new ClassHeaderContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 132;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PLParser.PRIVATE) {
					{
					this.state = 131;
					this.match(PLParser.PRIVATE);
					}
				}

				this.state = 134;
				this.match(PLParser.CLASS);
				this.state = 135;
				this.match(PLParser.UpperId);
				this.state = 137;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PLParser.LT) {
					{
					this.state = 136;
					this.typeParametersDeclaration();
					}
				}

				this.state = 139;
				this.match(PLParser.LPAREN);
				this.state = 140;
				this.typeDeclaration();
				this.state = 141;
				this.match(PLParser.RPAREN);
				}
				break;

			case 2:
				_localctx = new UtilClassHeaderContext(_localctx);
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 144;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PLParser.PRIVATE) {
					{
					this.state = 143;
					this.match(PLParser.PRIVATE);
					}
				}

				this.state = 146;
				this.match(PLParser.CLASS);
				this.state = 147;
				this.match(PLParser.UpperId);
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classMemberDefinition(): ClassMemberDefinitionContext {
		let _localctx: ClassMemberDefinitionContext = new ClassMemberDefinitionContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, PLParser.RULE_classMemberDefinition);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 151;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PLParser.PRIVATE) {
				{
				this.state = 150;
				this.match(PLParser.PRIVATE);
				}
			}

			this.state = 153;
			_la = this._input.LA(1);
			if (!(_la === PLParser.FUNCTION || _la === PLParser.METHOD)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 155;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PLParser.LT) {
				{
				this.state = 154;
				this.typeParametersDeclaration();
				}
			}

			this.state = 157;
			this.match(PLParser.LowerId);
			this.state = 158;
			this.match(PLParser.LPAREN);
			this.state = 170;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PLParser.LowerId) {
				{
				this.state = 159;
				this.annotatedVariable();
				this.state = 164;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 15, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 160;
						this.match(PLParser.COMMA);
						this.state = 161;
						this.annotatedVariable();
						}
						}
					}
					this.state = 166;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 15, this._ctx);
				}
				this.state = 168;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PLParser.COMMA) {
					{
					this.state = 167;
					this.match(PLParser.COMMA);
					}
				}

				}
			}

			this.state = 172;
			this.match(PLParser.RPAREN);
			this.state = 175;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PLParser.COLON) {
				{
				this.state = 173;
				this.match(PLParser.COLON);
				this.state = 174;
				this.typeExpr();
				}
			}

			this.state = 177;
			this.match(PLParser.ASSIGN);
			this.state = 178;
			this.expression(0);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public classMemberDeclaration(): ClassMemberDeclarationContext {
		let _localctx: ClassMemberDeclarationContext = new ClassMemberDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, PLParser.RULE_classMemberDeclaration);
		let _la: number;
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 181;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PLParser.PRIVATE) {
				{
				this.state = 180;
				this.match(PLParser.PRIVATE);
				}
			}

			this.state = 183;
			_la = this._input.LA(1);
			if (!(_la === PLParser.FUNCTION || _la === PLParser.METHOD)) {
			this._errHandler.recoverInline(this);
			} else {
				if (this._input.LA(1) === Token.EOF) {
					this.matchedEOF = true;
				}

				this._errHandler.reportMatch(this);
				this.consume();
			}
			this.state = 185;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PLParser.LT) {
				{
				this.state = 184;
				this.typeParametersDeclaration();
				}
			}

			this.state = 187;
			this.match(PLParser.LowerId);
			this.state = 188;
			this.match(PLParser.LPAREN);
			this.state = 200;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PLParser.LowerId) {
				{
				this.state = 189;
				this.annotatedVariable();
				this.state = 194;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 21, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 190;
						this.match(PLParser.COMMA);
						this.state = 191;
						this.annotatedVariable();
						}
						}
					}
					this.state = 196;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 21, this._ctx);
				}
				this.state = 198;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PLParser.COMMA) {
					{
					this.state = 197;
					this.match(PLParser.COMMA);
					}
				}

				}
			}

			this.state = 202;
			this.match(PLParser.RPAREN);
			this.state = 205;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === PLParser.COLON) {
				{
				this.state = 203;
				this.match(PLParser.COLON);
				this.state = 204;
				this.typeExpr();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeParametersDeclaration(): TypeParametersDeclarationContext {
		let _localctx: TypeParametersDeclarationContext = new TypeParametersDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, PLParser.RULE_typeParametersDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 207;
			this.match(PLParser.LT);
			this.state = 208;
			this.match(PLParser.UpperId);
			this.state = 213;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === PLParser.COMMA) {
				{
				{
				this.state = 209;
				this.match(PLParser.COMMA);
				this.state = 210;
				this.match(PLParser.UpperId);
				}
				}
				this.state = 215;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 216;
			this.match(PLParser.GT);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public typeDeclaration(): TypeDeclarationContext {
		let _localctx: TypeDeclarationContext = new TypeDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, PLParser.RULE_typeDeclaration);
		let _la: number;
		try {
			let _alt: number;
			this.state = 239;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case PLParser.VAL:
			case PLParser.PRIVATE:
				_localctx = new ObjTypeContext(_localctx);
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 218;
				this.objectTypeFieldDeclaration();
				this.state = 223;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 26, this._ctx);
				while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
					if (_alt === 1) {
						{
						{
						this.state = 219;
						this.match(PLParser.COMMA);
						this.state = 220;
						this.objectTypeFieldDeclaration();
						}
						}
					}
					this.state = 225;
					this._errHandler.sync(this);
					_alt = this.interpreter.adaptivePredict(this._input, 26, this._ctx);
				}
				this.state = 227;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === PLParser.COMMA) {
					{
					this.state = 226;
					this.match(PLParser.COMMA);
					}
				}
